src/objects/ffps_custRem__Reminder_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ffps_custRem__Days_Overdue__c</fullName>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Document_Name__c</fullName>
        <label>Document Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Document_Reference__c</fullName>
        <label>Document Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Document_Type__c</fullName>
        <label>Document Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Is_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Outstanding_Value__c</fullName>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Reminder__c</fullName>
        <label>Reminder</label>
        <referenceTo>ffps_custRem__Reminder__c</referenceTo>
        <relationshipLabel>Reminder Line Items</relationshipLabel>
        <relationshipName>Reminder_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Reminder Line Items</relationshipLabel>
        <relationshipName>Reminder_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Severity_Level__c</fullName>
        <label>Severity Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Transaction_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Reminder Line Items</relationshipLabel>
        <relationshipName>Reminder_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reminder Line Item</label>
    <nameField>
        <displayFormat>RLI{00000000}</displayFormat>
        <label>Reminder Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>